--- a/ui/pantry-ui/src/app/components/product-list/product-list.component.html
+++ b/ui/pantry-ui/src/app/components/product-list/product-list.component.html
@@ -1,4 +1,3 @@
-
 <div>
     <h1>Products</h1>
 
@@ -53,7 +52,8 @@
 
 
 <div class="list-group" *ngIf="DisplayMode === 'list'">
-    <a [routerLink]="['/products', product.id]" class="list-group-item list-group-item-action" aria-current="true" *ngFor="let product of products; track product">
+    <a [routerLink]="['/products', product.id]" class="list-group-item list-group-item-action" aria-current="true"
+        *ngFor="let product of products; track product">
         <div class="d-flex w-100 justify-content-between">
             <img style="max-height: 75px;" matListItemAvatar [src]="GetFileDownloadUrl(product)">
             <div class="w-100">
@@ -71,7 +71,7 @@
             </div>
         </div>
     </a>
-  </div>
+</div>
 
 
 <div class="row" *ngIf="DisplayMode === 'grid'">
@@ -89,7 +89,8 @@
                         </ng-container>
                     </mat-card-subtitle>
                 </mat-card-header>
-                <img mat-card-image class="object-fit-contain" style="height: 125px;" [src]="GetFileDownloadUrl(product)">
+                <img mat-card-image class="object-fit-contain" style="height: 125px;"
+                    [src]="GetFileDownloadUrl(product)">
                 <!--<mat-card-actions>
                     <button mat-icon-button (click)="removeImage(file)"><mat-icon>delete</mat-icon></button>
                     <a href="GetFileDownloadUrl(file.id)" mat-icon-button><mat-icon>download</mat-icon></a>
@@ -98,3 +99,7 @@
         </div>
     </div>
 </div>
+
+<button mat-fab class="quick-snack-fab" color="accent" (click)="openQuickSnack()">
+    <mat-icon>lunch_dining</mat-icon>
+</button>
