feat: add family preferences management with UI and integrate into AI context

--- a/ui/pantry-ui/src/app/side-menu/side-menu.component.html
+++ b/ui/pantry-ui/src/app/side-menu/side-menu.component.html
@@ -6,5 +6,7 @@
     <a mat-list-item [routerLink]="['/search']">Search</a>
     <a mat-list-item [routerLink]="['/gemini-chat']">Gemini Chat</a>
     <a mat-list-item [routerLink]="['/quick-label']">Quick Label</a>
+    <a mat-list-item [routerLink]="['/settings/family']">Family Preferences</a>
     <a mat-list-item [routerLink]="['/settings']">Settings</a>
+
 </mat-nav-list>
