--- a/ui/pantry-ui/src/styles.scss
+++ b/ui/pantry-ui/src/styles.scss
@@ -38,6 +38,11 @@ html {
   @media (prefers-color-scheme: dark) {
     @include mat.all-component-colors($dark-theme);
   }
+
+  // Force dark theme if Bootstrap is in dark mode
+  &[data-bs-theme="dark"] {
+    @include mat.all-component-colors($dark-theme);
+  }
 }
 
 
