--- a/ui/pantry-ui/src/app/profile/profile.css
+++ b/ui/pantry-ui/src/app/profile/profile.css
@@ -5,7 +5,7 @@
 .menu {
   width: 200px;
   padding-right: 20px;
-  border-right: 1px solid #ccc;
+  border-right: 1px solid var(--bs-border-color);
 }
 
 .menu ul {
@@ -18,11 +18,11 @@
   display: block;
   padding: 10px;
   text-decoration: none;
-  color: #333;
+  color: var(--bs-body-color);
 }
 
 .menu ul li a:hover {
-  background-color: #eee;
+  background-color: var(--bs-tertiary-bg);
 }
 
 .content {
@@ -35,36 +35,19 @@ table {
   border-collapse: collapse;
 }
 
-th, td {
-  border: 1px solid #ccc;
+th,
+td {
+  border: 1px solid var(--bs-border-color);
   padding: 8px;
   text-align: left;
 }
 
 th {
-  background-color: #f2f2f2;
+  background-color: var(--bs-secondary-bg);
 }
 
 code {
-  background-color: #eee;
+  background-color: var(--bs-tertiary-bg);
   padding: 5px;
   border-radius: 3px;
-}
-
-@media (prefers-color-scheme: dark) {
-  .menu ul li a {
-    color: #eee;
-  }
-
-  .menu ul li a:hover {
-    background-color: #333;
-  }
-
-  th {
-    background-color: #333;
-  }
-
-  th, td {
-    border-color: #555;
-  }
 }
