--- a/ui/pantry-ui/src/app/login/login.html
+++ b/ui/pantry-ui/src/app/login/login.html
@@ -14,6 +14,9 @@
           <input matInput type="password" id="password" name="password" [(ngModel)]="credentials.password">
         </mat-form-field>
         <button mat-raised-button color="primary" type="submit">Login</button>
+        <div class="kiosk-login-link" style="margin-top: 1rem; text-align: center;">
+          <button mat-button type="button" [routerLink]="['/kiosk-login']">Kiosk Login</button>
+        </div>
       </form>
     </mat-card-content>
   </mat-card>
